[tool.poetry]
name = "matchwork"
version = "1.0"
description = ""
authors = ["Shamil Abdulaev <ashamil435@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.9.0"
ipython = "^8.13.2"
flake8 = "^6.0.0"
flake8-import-order = "^0.18.2"
flake8-docstrings = "^1.7.0"
flake8-builtins = "^2.1.0"
flake8-quotes = "^3.3.2"
flake8-commas = "^2.1.0"
duckdb = "^0.8.0"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
